[package]
name = "dead-pulsar"
version = "0.1.0"
authors = ["Lionel <lionel.barret@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "dead-pulsar-piston"
# path = "main_piston.rs"


# [dependencies]
# rand="*"
# piston = "*"
# piston_window = "*"

# pistoncore-glutin_window = "*"
# piston2d-opengl_graphics = "*"
# find_folder = "*"
# gfx = "*"
# gfx_device_gl = "*"

# [dependencies.piston2d-graphics]
# version = "*"
# features = ["glyph_cache_rusttype"]

[[bin]]
name = "dead-pulsar-ggez"
path = "main.rs"


[dependencies]
rand="*"
ggez="*"
cgmath = "*"
mint = "*"
find_folder = "*"

