[package]
name = "dead-pulsar"
version = "0.1.0"
authors = ["Lionel <lionel.barret@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "dead-pulsar-piston"
# path = "main_piston.rs"


# [dependencies]
# rand="*"
# piston = "*"
# piston_window = "*"

# pistoncore-glutin_window = "*"
# piston2d-opengl_graphics = "*"
# find_folder = "*"
# gfx = "*"
# gfx_device_gl = "*"

# [dependencies.piston2d-graphics]
# version = "*"
# features = ["glyph_cache_rusttype"]

[[bin]]
name = "dead-pulsar-ggez"
path = "main.rs"


[dependencies]
rand="0.7.3"
ggez="0.5.1"
cgmath = "0.17"
mint = "0.5.4"
find_folder = "0.3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

nalgebra= {version = "0.20.0", features = ["mint"] }
ncollide2d = "0.22.0"
noise = "0.6.0"
# num-trait = "*"